Add patch for BPIPE_PID race condition, and Python3 support